# Planning_Benchmark_ompl

./: CMakeLists.txt  Planning_Benchmark.repos  README.md  package.xml
config/: moveit_py.yaml
config/obstacles/obstacle_00/: mesh.ply
config/scenarios/example_scenario/obstacles/obstacle_00/: mesh.stl
config/scenarios/example_scenario/obstacles/obstacle_01/: shape.yaml
config/scenarios/final_scenario_0/: goal.yaml
config/scenarios/final_scenario_10/obstacles/dynamic_obstacle_1/: shape.yaml
config/scenarios/final_scenario_10/obstacles/dynamic_obstacle_2/: trajectory.yaml
config/scenarios/final_scenario_11/: goal.yaml
config/scenarios/final_scenario_11/obstacles/obstacle_01/: trajectory.yaml
config/scenarios/final_scenario_11/obstacles/obstacle_06/: trajectory.yaml
config/scenarios/final_scenario_12/: goal.yaml
config/scenarios/final_scenario_12/obstacles/obstacle_03/: trajectory.yaml
config/scenarios/final_scenario_13/obstacles/dynamic_obstacle_3/: trajectory.yaml
config/scenarios/final_scenario_14/obstacles/obstacle_04/: trajectory.yaml
config/scenarios/final_scenario_15/obstacles/dynamic_obstacle_0/: trajectory.yaml
config/scenarios/final_scenario_16/obstacles/dynamic_obstacle_1/: trajectory.yaml
config/scenarios/final_scenario_19/: goal.yaml
config/scenarios/final_scenario_20/obstacles/obstacle_00/: trajectory.yaml
config/scenarios/final_scenario_24/obstacles/dynamic_obstacle_0/: trajectory.yaml
config/scenarios/final_scenario_26/obstacles/dynamic_obstacle_0/: shape.yaml
config/scenarios/final_scenario_28/obstacles/dynamic_obstacle_0/: trajectory.yaml
config/scenarios/final_scenario_28/obstacles/dynamic_obstacle_1/: trajectory.yaml
config/scenarios/final_scenario_28/obstacles/dynamic_obstacle_2/: trajectory.yaml
config/scenarios/final_scenario_29/obstacles/dynamic_obstacle_3/: trajectory.yaml
config/scenarios/final_scenario_29/obstacles/dynamic_obstacle_4/: trajectory.yaml
config/scenarios/final_scenario_29/obstacles/dynamic_obstacle_5/: trajectory.yaml
config/scenarios/final_scenario_3/obstacles/obstacle_11/: shape.yaml
config/scenarios/final_scenario_33/: goal.yaml
config/scenarios/final_scenario_4/obstacles/obstacle_07/: shape.yaml
config/scenarios/final_scenario_4/obstacles/obstacle_09/: trajectory.yaml
config/scenarios/final_scenario_4/obstacles/obstacle_10/: trajectory.yaml
config/scenarios/final_scenario_5/obstacles/obstacle_05/: trajectory.yaml
config/scenarios/final_scenario_8/obstacles/obstacle_00/: trajectory.yaml
config/scenarios/final_scenario_8/obstacles/obstacle_07/: trajectory.yaml
config/scenarios/final_scenario_8/obstacles/obstacle_09/: shape.yaml
config/scenarios/scenario_1/obstacles/obstacle_00/: py2mesh.ipynb  test.py  trajectory.yaml
config/scenarios/scenario_2/obstacles/obstacle_01/: trajectory.yaml
config/scenarios/scenario_2/obstacles/obstacle_02/: trajectory.yaml
config/scenarios/scenario_3/obstacles/obstacle_02/: trajectory.yaml
config/scenarios/scenario_4/obstacles/obstacle_02/: shape.yaml
config/scenarios/scenario_4/obstacles/obstacle_05/: shape.yaml
config/scenarios/scenario_4/obstacles/obstacle_08/: trajectory.yaml
config/scenarios/scenario_4/obstacles/obstacle_10/: shape.yaml
config/scenarios/scenario_5/obstacles/obstacle_07/: shape.yaml
config/scenarios/scenario_5/obstacles/obstacle_09/: shape.yaml
config/scenarios/scenario_5/obstacles/obstacle_10/: shape.yaml
config/scenarios/scenario_5/obstacles/obstacle_11/: trajectory.yaml
include/benchmark_planning/: collision_checker.hpp  planning.hpp  simulation.hpp  utils.hpp
launch/: simulation_launch.py
src/: collision_checker.cpp  planning.cpp  simulation.cpp  simulation_main.cpp  utils.cpp
